@@ -13,13 +13,18 @@ It's designed to make use of Scala's type system, macros, and runtime multi-stag
 
 Slinc is published to Maven Central for Scala 3. It is built to take advantage of the cutting edge of Scala functionality and features, so your project will most certainly need to track the latest Scala version if you want to use the latest version of Slinc. Currently, the Scala version in use is `3.3.0-RC3`. 
 
-### SBT setup 
+### SBT setup and JDK setup 
 
 In your `build.sbt`:
 
 ```scala
 libraryDependencies += "fr.hammons" %% "slinc-runtime" % "0.2.0"
 //if forking and on Java 17
+javaOptions ++= Seq("--add-modules=jdk.incubator.foreign", "--enable-native-access=ALL-UNNAMED")
+
+// To install JDK 17 and set it as the default version
+sdk install java 17.0.0-tem
+sdk default java 17.0.0-tem
 javaOptions ++= Seq("--add-modules=jdk.incubator.foreign", "--enable-native-access=ALL-UNNAMED")
 ```
 
@@ -31,6 +36,12 @@ in .jvmopts in the root of your build:
 
 For additional setup instructions, please refer to the configuration page.
 
+To install JDK 17 and set it as the default version, run the following commands:
+```
+sdk install java 17.0.0-tem
+sdk default java 17.0.0-tem
+```
+
 Once you have your build system set up, you can create a new file and write the following code: 
 
 ```scala
@@ -39,9 +50,12 @@ import fr.hammons.slinc.runtime.given
 case class div_t(quot: CInt, rem: CInt) derives Struct 
 
 trait MyLib derives Lib:
+
+// The specific JDK version required for running the tests
+@Jvm static private val jvmVersion = "temurin:1.19"
   def div(numer: CInt, denom: CInt): div_t
 
-val myLib = Lib.instance[MyLib]
+val myLib = Lib.instance[MyLib](jvmVersion)
 
 @main def calc = 
   val (quot, rem) = Tuple.fromProduct(myLib.div(5,2))
@@ -49,6 +63,15 @@ val myLib = Lib.instance[MyLib]
 ```
 
 This library relies on the user importing the runtime from `fr.hammons.slinc.runtime`.
+
+// To install JDK 17 and set it as the default version
+sdk install java 17.0.0-tem
+sdk default java 17.0.0-tem
+
+To run the tests, use the following command:
+```
+mill <command>
+```
 
 To learn more about the library, refer to the documentation website for Slinc [here](https://slinc.hammons.fr/docs/index.html)
 
